Set min-width on logo to prevent navigation overlap

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -24,6 +24,7 @@
 
     img {
         height: 50px;
+		min-width: 175px;
     }
 }
 
